--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,5 +1,6 @@
-  .hero-container {
-    background: url('../../public/images/img-home.jpg') center center/cover no-repeat;
+  .main-container {
+    /*background: url('../../public/images/img-home.jpg') center center/cover no-repeat; */
+    background-color: #099;
     height: 100vh;
     width: 100%;
     display: flex;
@@ -10,13 +11,13 @@
     object-fit: contain;
   }
   
-  .hero-container > h1 {
+  .main-container > h1 {
     color: #fff;
     font-size: 100px;
     margin-top: -100px;
   }
   
-  .hero-container > p {
+  .main-container > p {
     margin-top: 8px;
     color: #fff;
     font-size: 32px;
@@ -24,11 +25,11 @@
       'Lucida Sans', Arial, sans-serif;
   }
   
-  .hero-btns {
+  .main-btns {
     margin-top: 32px;
   }
   
-  .hero-btns .btn {
+  .main-btns .btn {
     margin: 6px;
   }
   
@@ -37,19 +38,19 @@
   }
   
   @media screen and (max-width: 960px) {
-    .hero-container > h1 {
+    .main-container > h1 {
       font-size: 70px;
       margin-top: -150px;
     }
   }
   
   @media screen and (max-width: 768px) {
-    .hero-container > h1 {
+    .main-container > h1 {
       font-size: 50px;
       margin-top: -100px;
     }
   
-    .hero-container > p {
+    .main-container > p {
       font-size: 30px;
     }
   
