--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,5 +1,4 @@
-  .main-container {
-    /*background: url('../../public/images/img-home.jpg') center center/cover no-repeat; */
+  .Main-main-container {
     background-color: #099;
     height: 100vh;
     width: 100%;
@@ -11,13 +10,13 @@
     object-fit: contain;
   }
   
-  .main-container > h1 {
+  .Main-main-container > h1 {
     color: #fff;
     font-size: 100px;
     margin-top: -100px;
   }
   
-  .main-container > p {
+  .Main-main-container > p {
     margin-top: 8px;
     color: #fff;
     font-size: 32px;
@@ -25,11 +24,11 @@
       'Lucida Sans', Arial, sans-serif;
   }
   
-  .main-btns {
+  .Main-main-btns {
     margin-top: 32px;
   }
   
-  .main-btns .btn {
+  .Main-main-btns .btn {
     margin: 6px;
   }
   
@@ -38,19 +37,19 @@
   }
   
   @media screen and (max-width: 960px) {
-    .main-container > h1 {
+    .Main-main-container > h1 {
       font-size: 70px;
       margin-top: -150px;
     }
   }
   
   @media screen and (max-width: 768px) {
-    .main-container > h1 {
+    .Main-main-container > h1 {
       font-size: 50px;
       margin-top: -100px;
     }
   
-    .main-container > p {
+    .Main-main-container > p {
       font-size: 30px;
     }
   
