--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,7 @@
 .navbar {
     background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
-    height: 80px;
+    /*height: 80px;*/
+    height: 8vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,7 +15,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 80px;
+    height: 8vh;
     max-width: 1500px;
   }
   
