--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -1,26 +1,43 @@
 .content-main-container {
-    background-color: #099;
-    height: 92vh;
-    position: sticky;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: left;
-    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
-    object-fit: contain;
-  }
-  
-  .content-main-container > h1 {
-    color: #fff;
-    font-size: 100px;
-    margin-top: -100px;
-  }
+  background-color: #099;
+  height: fit-content;
+  position: sticky;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: left;
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+  object-fit: contain;
+}
 
-  .content-main-container > p {
-    margin-top: 8px;
-    color: #fff;
-    font-size: 32px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-      'Lucida Sans', Arial, sans-serif;
-  }
+.content-main-container > h1 {
+  color: #fff;
+  font-size: 100px;
+  margin-top: -100px;
+}
+
+.content-main-container > p {
+  margin-top: 8px;
+  color: #fff;
+  font-size: 32px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+.content-main-container > ul {
+  list-style: inside;
+  margin-top: 8px;
+  margin-left: 5%;
+  color: #fff;
+  font-size: 32px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+
+.inner-list {
+  margin-left: 3%;
+}
+
+.Main-main-btns {
+  margin-left: 3%;
+}
