changed css for Overview, Content, Main

--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -1,5 +1,5 @@
 .content-main-container {
-  background-color: #099;
+  background-color: #00308f;
   height: fit-content;
   position: sticky;
   width: 100%;
