--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -47,7 +47,7 @@
   }
   
   .nav-item {
-    height: 80px;
+    height: 8vh;
   }
   
   .nav-links {
@@ -87,7 +87,7 @@
       width: 100%;
       height: 90vh;
       position: absolute;
-      top: 80px;
+      top: 8vh;
       left: -100%;
       opacity: 1;
       transition: all 0.5s ease;
