--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -1,5 +1,5 @@
 .content-main-container {
-  background-color: #00308f;
+  background-color: #2e2fe3;
   height: fit-content;
   position: sticky;
   width: 100%;
