--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,5 +1,5 @@
 .Main-main-container {
-  background-color: #00308f;
+  background-color: #2e2fe3;
   height: 92vh;
   width: 100%;
   display: flex;
@@ -11,14 +11,14 @@
 }
 
 .Main-main-container > h1 {
-  color: #fff;
+  color: #f3f7d4;
   font-size: 100px;
   margin-top: -100px;
 }
 
 .Main-main-container > p {
   margin-top: 8px;
-  color: #fff;
+  color: #f3f7d4;
   font-size: 32px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
