--- a/src/components/Overview.css
+++ b/src/components/Overview.css
@@ -1,10 +1,13 @@
 .overview-white-stripe {
+  background-color: #090934;
+  color: #f3f7d4;
   height: 5vh;
   text-align: center;
 }
 
 .overview-main-container {
-  background-color: #00308f;
+  /*background-color: #00308f;*/
+  background-color: #2e2fe3;
   height: fit-content;
   width: 100%;
   display: flex;
@@ -17,7 +20,7 @@
 }
 
 .overview-main-container > h1 {
-  color: #fff;
+  color: #f3f7d4;
   font-size: 100px;
   margin-top: -100px;
 }
@@ -28,7 +31,7 @@
   align-self: center;
   text-align: left;
   width: 90%;
-  color: #fff;
+  color: #f3f7d4;
   font-size: 32px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
@@ -36,8 +39,8 @@
 
 .overview-main-container > ul {
   list-style: inside;
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin-top: 5vh;
+  margin-bottom: 5vh;
   margin-left: 9%;
   color: #fff;
   font-size: 32px;
@@ -45,15 +48,12 @@
     "Lucida Sans", Arial, sans-serif;
 }
 
-.list > li {
-  margin-top: 20px;
-}
-
 .square {
   width: 90%;
   height: fit-content;
   border-radius: 30px;
-  background-color: #099;
+  /*background-color: #099;*/
+  background-color: #090934;
   display: block;
   align-self: center;
   justify-content: center;
@@ -65,9 +65,11 @@
 .square > ul {
   list-style: inside;
   margin-top: 8px;
+  margin-bottom: 4vh;
   margin-left: 5%;
   color: #fff;
   font-size: 32px;
+  font-style: italic;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
 }
@@ -87,8 +89,8 @@
   border: solid;
   border-radius: 30px;
   border-width: thick;
-  border-color: #099;
-  background-color: #00308f;
+  border-color: #090934;
+  background-color: #2e2fe3;
   display: block;
   align-self: center;
   justify-content: center;
@@ -115,10 +117,4 @@
 
 .fa-play-circle {
   margin-left: 4px;
-}
-
-.definition {
-  align-self: center;
-  text-align: left;
-  width: 90%;
 }
