--- a/src/components/Module1.css
+++ b/src/components/Module1.css
@@ -46,3 +46,21 @@ span.italicbold{
 .style{
   margin-left: 450px;
 }
+.img5{
+  margin-left: 450px;
+}
+.img4{
+  margin-left: 430px;
+}
+.img3{
+  margin-left: 400px;
+}
+.img6{
+  margin-left: 500px;
+}
+.img2{
+  margin-left: 300px;
+}
+.img1{
+  margin-left: 250px;
+}
