--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -1,6 +1,6 @@
 .content-main-container {
   background-color: #2e2fe3;
-  height: fit-content;
+  height: 92vh;
   position: sticky;
   width: 100%;
   display: flex;
