--- a/src/components/Module2.css
+++ b/src/components/Module2.css
@@ -1,51 +1,64 @@
-.Module2-main-container{ 
-    width: 90%; 
-    height: fit-content; 
-    background-color: #feffff; 
-    color: #011928; 
-    align-self: center; 
-    justify-content: center; 
-    align-items: stretch; 
-    text-align: left; 
-    margin-left: auto;
-      margin-right: auto;
-      font-size: 32px;
-      font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-      "Lucida Sans", Arial, sans-serif;
-      border: solid;
-    border-radius: 30px;
-    border-width: thick;
-    border-color: #011928;
-    background-color: #fcfcfc;
-      
-    
-  
-  } 
-  .header{ 
-    width: 100%; 
-    
-    color: #fff; 
-    border-radius: 20px; 
-    border-width: thick; 
-    border-color: #099; 
-    background-color: #011928; 
-    padding: 10px 15px 10px 15px;  
-    align-self: center; 
-    justify-content: center; 
-    align-items: stretch; 
-    text-align: center; 
-   
-  } 
-  .Module2-test{ 
-      width: 70%; 
-      order: solid; 
-      border-radius: 30px; 
-      border-width: thick; 
-      border-color: #011928; 
-      background-color: #fff; 
-      padding: 10px 15px 10px 15px;  
-      align-self: center; 
-      justify-content: center; 
-      align-items: stretch; 
-      text-align: left; 
-    }
+.Module2-main-container {
+  width: 90%;
+  height: fit-content;
+  background-color: #feffff;
+  color: #011928;
+  align-self: center;
+  justify-content: center;
+  align-items: stretch;
+  text-align: left;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 32px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  border: solid;
+  border-radius: 30px;
+  border-width: thick;
+  border-color: #011928;
+  background-color: #fcfcfc;
+  display: block;
+}
+
+.Module2-main-container > p {
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-bottom: 5vh;
+  line-height: 1.5;
+}
+
+.Module2-main-container > ol {
+  margin-left: 5%;
+}
+
+.Module2-main-container > ul {
+  margin-left: 5%;
+}
+
+.header {
+  width: 100%;
+
+  color: #fff;
+  border-radius: 20px;
+  border-width: thick;
+  border-color: #099;
+  background-color: #011928;
+  padding: 10px 15px 10px 15px;
+  align-self: center;
+  justify-content: center;
+  align-items: stretch;
+  text-align: center;
+}
+.Module2-test {
+  width: 70%;
+  order: solid;
+  border-radius: 30px;
+  border-width: thick;
+  border-color: #011928;
+  background-color: #fff;
+  padding: 10px 15px 10px 15px;
+  align-self: center;
+  justify-content: center;
+  align-items: stretch;
+  text-align: left;
+}
